--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,10 @@
         <form class="gridLogin" id= 'formulario'>
         <label><input type="text" id="correo" class="filded" placeholder="Correo"></label>
         <label><input type="password" id="contrasena" class="filded" placeholder="Contraseña"> </label>
-        <label> <button type= 'submit' class= 'sendButton' id = 'enviarLogin'>Iniciar sesión</button>
+        <label> <button type= 'submit' class= 'sendButton' id = 'enviarLogin' Onclick = "changePage ()" >Iniciar sesión</button>
         </form>
         <p id="signIn">¿Deseas crear una cuenta? <a href="">Regístrate</a> </p> 
-        
-        </main>
+    </main>
         
 
     <script type= "module" src="main.js"></script>
