--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body class ="bodyLogIn">
-    <main class="contenedorLogin"> 
+    <main class="contenedorLogin">
         <section class="logoLogin">
           <img class="imagenLogin" src="./imagenes/Logo.png">
         </section>
-        <form class="gridLogin" id= 'formulario'>
+        <form class="gridLogin" id="formulario">
         <label><input type="email" id="correo" class="filded" placeholder="Correo"></label>
         <label><input type="password" id="contrasena" class="filded" placeholder="Contraseña"> </label>
-        <label> <button type= 'submit' class= 'sendButton' id = 'enviarLogin' Onclick = "changePage ()" >Iniciar sesión</button>
+        <label> <button type="submit" class="sendButton" id="enviarLogin">Iniciar sesión</button>
         </form>
-        <p id="signIn">¿Deseas crear una cuenta? <a href="">Regístrate</a> </p> 
+        <p id="signIn">¿Deseas crear una cuenta? <a href="">Regístrate</a> </p>
     </main>
-        
+
 
     <script type= "module" src="main.js"></script>
 </body>
