--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
         <section class="logoLogin">
           <img class="imagenLogin" src="./imagenes/Logo.png">
         </section>
-        <form class="gridLogin" id= 'formulario'>
-        <label><input type="email" id="correo" class="filded" placeholder="Correo"></label>
-        <label><input type="password" id="contrasena" class="filded" placeholder="Contraseña"> </label>
-        <label> <button type= 'submit' class= 'sendButton' id = 'enviarLogin' >Iniciar sesión</button>
-        </form>
+            <form class="gridLogin" id= "formulario">
+                <label><input type="email" id="correo" class="filded" placeholder="Correo"></label>
+                <label><input type="password" id="contrasena" class="filded" placeholder="Contraseña"> </label>
+                <label> <button type= "submit" class= "sendButton" id = "enviarLogin" >Iniciar sesión</button>
+            </form>
         <p id="signIn">¿Deseas crear una cuenta? <a href="">Regístrate</a> </p> 
     </main>
         
